# site_generator

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build  clarification.txt
examples/: debug.mess  embed.md  hello_world.sg  include_test.mess  index.md  index.mess  linked.md  syntax_extensions.mess
include/sitegen/: document_tree.h  lexer.h  site_generator.h  stringview.h  vector.h
include/sitegen/markless/: document.h  parser.h
lib/: CMakeLists.txt  document.c  document_tree.c  lexer.c  site_generator.c  stringview.c  vector.c
lib/markless/: parser.c
src/: driver.c
